--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,19 +3,15 @@
   "compilerOptions": {
     "outDir": "./dist/",
     "sourceMap": true,
-    "declaration": false,
+    "declaration": true,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true,
     "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
     "lib": [
-      "es2017",
-      "dom"
+      "es2015"
     ]
   }
 }
